# kube-controller-demo

./: BUILD  WORKSPACE
apis/cr/v1/: BUILD.bazel  register.go  types.go
common/: BUILD.bazel
examples/: BUILD.bazel  basic.yaml
reboot-agent/: BUILD.bazel  daemonset.yaml  main.go
reboot-controller/: BUILD.bazel  deployment.yaml  main.go  package.yaml
